# chat-gpt-lib-rs

./: .gitignore  :wq  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  test.yml
examples/: chat.rs  chat_streaming.rs  cli-chat-example.rs  cli-simple-chat-example.rs  completions.rs  completions_streaming.rs  embeddings.rs  file-abc123.jsonl  files.rs  fine_tunes.rs  models.rs  moderations.rs
src/: api.rs  client.rs  config.rs  error.rs  lib.rs  model.rs  models.rs  tokenizer.rs
src/api_resources/: chat.rs  completions.rs  embeddings.rs  files.rs  fine_tunes.rs  mod.rs  models.rs  moderations.rs
src/client/: chat_input.rs  chat_response.rs  client.rs  error.rs  mod.rs  tool.rs
