[package]
name = "chat-gpt-lib-rs"
version = "0.1.3"
edition = "2021"
description = "A Rust library for interacting with OpenAI's ChatGPT API, providing a simple interface to make API requests and handle responses."
license = "Apache-2.0"
repository = "https://github.com/Arend-Jan/chat-gpt-lib-rs"
authors = ["Arend-Jan Oosterveld <arendjan.oosterveld@gmail.com>"]
readme = "README.md"
keywords = ["openai", "chatgpt", "gpt", "api", "client"]
categories = ["api-bindings", "text-processing", "web-programming"]
rust-version = "1.60.0"  # MSRV

# Add the example configuration
[[example]]
name = "cli-chat-example"
path = "examples/cli-chat-example.rs"

[dependencies]
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
console = "0.15.5"
indicatif = "0.17.3"
openssl = { version = "0.10", features = ["vendored"] } # for msrv 
serde_urlencoded = "0.7.1" # for msrv
