[package]
name = "chat-gpt-lib-rs"
version = "0.5.0"
edition = "2021"
description = "A Rust library for interacting with OpenAI's ChatGPT API, providing a simple interface to make API requests and handle responses."
license = "Apache-2.0"
repository = "https://github.com/Arend-Jan/chat-gpt-lib-rs"
authors = ["Arend-Jan Oosterveld <arendjan.oosterveld@gmail.com>"]
readme = "README.md"
keywords = ["openai", "chatgpt", "gpt", "api", "client"]
categories = ["api-bindings", "text-processing", "web-programming"]

# Add the example configuration
[[example]]
name = "cli-chat-example"
path = "examples/cli-chat-example.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15"
console = "0.15"
indicatif = "0.17"

