[package]
name = "chat-gpt-lib-rs"
version = "0.6.4"
edition = "2021"
description = "A Rust library for interacting with OpenAI's ChatGPT API, providing a simple interface to make API requests and handle responses."
license = "Apache-2.0"
repository = "https://github.com/Arend-Jan/chat-gpt-lib-rs"
authors = ["Arend-Jan Oosterveld <arendjan.oosterveld@gmail.com>"]
readme = "README.md"
keywords = ["openai", "chatgpt", "gpt", "api", "client"]
categories = ["api-bindings", "text-processing", "web-programming"]

# Add the example configuration
[[example]]
name = "cli-chat-example"
path = "examples/cli-chat-example.rs"

[dependencies]
async-stream = "0.3"
bytes = "1.9"
env_logger = "0.11"
futures-util = "0.3"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream", "blocking"] }
rustls = ">=0.23.21, <0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.37", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
tokio-util = "0.7"

[dev-dependencies]
tempfile = "3.15"
wiremock = "0.6"
serial_test = "3.2"
dotenvy = "0.15"
console = "0.15"
indicatif = "0.17"
